// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DOM structure matches snapshot 1`] = `
<div>
  <div
    class="min-h-screen min-w-[100vw] bg-red-900 flex flex-col p-5 items-center md:flex-row md:justify-between md:p-10"
  >
    <form
      action=""
      class="bg-white p-5 rounded"
      method=""
      role="form"
    >
      <h1>
        Log In.
      </h1>
      <div>
        <label
          for="username"
          role="user-label"
        />
        <input
          name="username"
          placeholder="Username ex. Joe123"
          required=""
          role="username-input"
          type="text"
        />
      </div>
      <div>
        <label
          for="password"
          role="password-label"
        />
        <input
          name="password"
          placeholder="password"
          required=""
          role="user-password"
          type="password"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`render of Form 1`] = `
<form
  action=""
  class="bg-white p-5 rounded"
  method=""
  role="form"
>
  <h1>
    Log In.
  </h1>
  <div>
    <label
      for="username"
      role="user-label"
    />
    <input
      name="username"
      placeholder="Username ex. Joe123"
      required=""
      role="username-input"
      type="text"
    />
  </div>
  <div>
    <label
      for="password"
      role="password-label"
    />
    <input
      name="password"
      placeholder="password"
      required=""
      role="user-password"
      type="password"
    />
  </div>
</form>
`;
